--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ pathspec==0.9.0
 platformdirs==2.5.2
 pycodestyle==2.5.0
 PySocks==1.7.1
+python-dotenv==0.20.0
 requests==2.28.1
 requests-oauthlib==1.2.0
 six==1.13.0
