--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ tweepy = "4.10.0"
 typing-extensions = "4.3.0"
 Unidecode = "1.1.1"
 urllib3 = "1.26.5"
+structlog = "^22.1.0"
 
 [tool.poetry.dev-dependencies]
 
